@@ -21,14 +21,14 @@ use strict;
 use warnings;
 
 use Test::More 0.88;
-use Test::Fatal;
 
 use Cwd            ();
 use File::Basename ();
 use File::Spec     ();
-use lib File::Spec->catdir( File::Basename::dirname( Cwd::abs_path __FILE__ ), qw(.. t lib) );
+use lib File::Spec->catdir( File::Basename::dirname( Cwd::abs_path __FILE__ ), 'lib' );
 
-use Local::Test::TempDir qw(tempdir);
+use Local::Test::Exception qw(exception);
+use Local::Test::TempDir   qw(tempdir);
 
 use Git::Background 0.003;
 
