@@ -21,11 +21,13 @@ use strict;
 use warnings;
 
 use Test::More 0.88;
-use Test::Fatal;
 
 use Cwd            ();
 use File::Basename ();
 use File::Spec     ();
+use lib File::Spec->catdir( File::Basename::dirname( Cwd::abs_path __FILE__ ), 'lib' );
+
+use Local::Test::Exception qw(exception);
 
 use Git::Background 0.003;
 
